# HiFlow3

./: AGG_EXP1.py  AGG_EXP2.py  AGG_EXP3.py  README.md  main.py  pyproject.toml
BASE/: 0.txt  1.txt  2.txt  3.txt  4.txt  Result.ipynb  Sep2_721:40:02_HiFloW3.pickle  Sep2_721:43:10_HiFloW3.pickle  Sep2_721:45:54_HiFloW3.pickle  Sep2_721:49:47_HiFloW3.pickle  Sep2_721:51:56_HiFloW3.pickle  Sep2_721:55:35_HiFloW3.pickle  Sep2_721:57:21_HiFloW3.pickle  Sep2_721:59:23_HiFloW3.pickle  Sep2_722:01:14_HiFloW3.pickle  Sep2_722:05:03_HiFloW3.pickle  Sep2_722:08:35_HiFloW3.pickle  Sep2_810:09:57_HiFloW3.pickle  Sep2_810:13:58_HiFloW3.pickle  Sep2_810:16:18_HiFloW3.pickle  Sep2_810:58:42_HiFloW3.pickle  Sep2_811:01:41_HiFloW3.pickle  Sep2_811:04:42_HiFloW3.pickle  Sep2_811:24:51_HiFloW3.pickle  Sep2_811:42:32_HiFloW3.pickle  ToDo  ZSep2_721:37:33_HiFloW3.pickle  ZSep2_811:39:43_HiFloW3.pickle  communication.pickle  config.toml  coordinator.py  dd.pickle  final_info.csv  network.txt  node.py  swami.csv  try.sh  validator.py
BASE/data/: 0_m.csv  1_m.csv  2_m.csv  3.csv  4.csv
BASE/node_data/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
DIABETICS/LR/: EXP2_DATA_POISON.py  EXP3_MODEL_POISON.py  temp.py
DIABETICS/SGD/: Agg1_ZETA.py  EXP1_ZETA.py  EXP2_DATA_POISON.py  EXP3_MODEL_POISON.py
EXTRA/: AGG_EXP1.py  AGG_EXP2.py  AGG_EXP3.py
MUSHROOM/LR/: EXP1_ZETA.py  (+2 more)
Visualization_Results/: .Rhistory  EXP1_RESULT.csv  EXP2_RESULT.csv  EXP3_RESULT.csv  visualization.Rmd
setup_scripts/: Notes_For_Later  setup_keys.py
(+6685 files in other folders)
